Trying to fix background image scroll on mobile

--- a/index.css
+++ b/index.css
@@ -20,6 +20,8 @@ body {
   background-attachment: fixed;
   color: rgb(255,255,255);
   font-family: "Raleway", serif;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 #moogle {
